--- a/public/bhaskar-sir.html
+++ b/public/bhaskar-sir.html
@@ -1,4 +1,4 @@
-<table style="background-image: url(https://i.ibb.co/Jtfn2yP/enigma-signature.png);
+<table style="background-image: url(https://drive.google.com/thumbnail?id=1JmtbjNZgj1_MLxgK3rpTl5jhW--oAW6q&sz=w650-h250);
      background-repeat: no-repeat;
       background-size: contain;
        background-color: #fff;" cellpadding="0" cellspacing="0" height="250" width="650">
@@ -6,7 +6,7 @@
         <tr>
             <td width="20" height="200"></td>
             <td style="padding: 5px;" height="200" width="120">
-                <img width="120" alt="Profile" src="/signature20/profile-border-sir.png">
+                <img width="120" alt="Profile" src="https://drive.google.com/thumbnail?id=12Gp1WgM7T-SIJGfHB3dT_QMNcrCax9in&sz=w120">
             </td>
             <td height="200" width="30">
                 <table height="200" width="30" cellpadding="0" cellspacing="0">
@@ -70,11 +70,11 @@
 
                         <tr>
                             <td height="30"><img style="width: 20px; vertical-align: middle;" alt="Contact"
-                                    src="/signature20/contact.png" width="20" /></td>
+                                    src="https://drive.google.com/thumbnail?id=12aTlGkNyguWuTDXwNSUlMXwl-WNNeCve&sz=w20" width="20" /></td>
                             <td style="font-family: sans-serif; font-size: 11px; margin: 0px; font-weight: 400; letter-spacing: 1px; padding-left: 10px;"
                                 height="30">
                                 <a style="font-size: 11px; font-family: sans-serif; font-weight: 400; letter-spacing: 1px; text-decoration: none !important; cursor: pointer !important; color: rgb(8, 39, 63);"
-                                    href=tel:+918745044555 target="_blank">+918745044555
+                                    href="tel:+918745044555" target="_blank">+918745044555
                                 </a>
                             </td>
                             <td></td>
@@ -82,7 +82,7 @@
 
                         <tr>
                             <td height="30"><img style="width: 20px; vertical-align: middle;" alt="Web"
-                                    src="/signature20/web.png" width="20" /></td>
+                                    src="https://drive.google.com/thumbnail?id=1wG_3mnYwZNaosSbC_GPBKOAAlK8t_iSJ&sz=w20" width="20" /></td>
                             <td style="font-family: sans-serif; font-size: 11px; margin: 0px; font-weight: 400; letter-spacing: 1px; padding-left: 10px;"
                                 height="30">
                                 <p style="margin: 0px;">
@@ -97,7 +97,7 @@
 
                         <tr>
                             <td height="30"><img style="width: 20px; vertical-align: middle;" alt="Location"
-                                    src="/signature20/location.png" width="20" /></td>
+                                    src="https://drive.google.com/thumbnail?id=1LIb9RgTbqJYXWL8xzELvhCP8_L1IDzbC&sz=w20" width="20" /></td>
                             <td style="font-family: sans-serif; font-size: 11px; margin: 0px; font-weight: 400; letter-spacing: 1px; padding-left: 10px; color: rgb(8, 39, 63);"
                                 height="30">Suite 607, Grandslam I-Thum, A-40,Sector - 62, Noida, Uttar Pradesh (201309)
                             </td>
@@ -134,7 +134,7 @@
                         <tr>
                             <td width="25"></td>
                             <td width="90">
-                                <img alt="Logo" width="90" src="/signature20/enigma-logo.png">
+                                <img alt="Logo" width="90" src="https://drive.google.com/thumbnail?id=1f6p5MzXwc20iTlqUkRjXyIkFmE1eIy7Y">
                             </td>
                             <td width="40">
 
@@ -150,28 +150,28 @@
                                                 <a style="text-decoration: none !important; cursor: pointer !important;"
                                                     href="https://www.facebook.com/" target="_blank">
                                                     <img style="width: 20px; padding: 10px 3px; vertical-align: middle;"
-                                                        alt="Facebook Icon" src="/signature20/fb.png" width="20" />
+                                                        alt="Facebook Icon" src="https://drive.google.com/thumbnail?id=13RCQnRRWCuEEbhAVES5EFBqErinDBL2o" width="20" />
                                                 </a>
                                             </td>
                                             <td width="30" height="50" align="center">
                                                 <a style="text-decoration: none !important; cursor: pointer !important;"
                                                     href="https://www.linkedin.com/" target="_blank">
                                                     <img style="width: 20px; padding: 10px 3px; vertical-align: middle;"
-                                                        alt="LinkedIn Icon" src="/signature20/link.png" width="20" />
+                                                        alt="LinkedIn Icon" src="https://drive.google.com/thumbnail?id=1lfsRXiBQz1JozoAGUQdciiWXtjbTD8DO" width="20" />
                                                 </a>
                                             </td>
                                             <td width="30" height="50" align="center">
                                                 <a style="text-decoration: none !important; cursor: pointer !important;"
                                                     href="https://twitter.com/" target="_blank">
                                                     <img style="width: 20px; padding: 10px 3px; vertical-align: middle;"
-                                                        alt="Twitter Icon" src="/signature20/twitter.png" width="20" />
+                                                        alt="Twitter Icon" src="https://drive.google.com/thumbnail?id=1MgkwhBaae-sVqR7ZYbBa6Ohz6IJ4BdAE" width="20" />
                                                 </a>
                                             </td>
                                             <td width="30" height="50" align="center">
                                                 <a style="text-decoration: none !important; cursor: pointer !important;"
                                                     href="patronum.com" target="_blank">
                                                     <img style="width: 20px; padding: 10px 3px; vertical-align: middle;"
-                                                        alt="Google Icon" src="/signature20/g-plus.png" width="20" />
+                                                        alt="Google Icon" src="https://drive.google.com/thumbnail?id=1vfaQgIttWefIDpUS7plWVllwD3x1tKy6" width="20" />    
                                                 </a>
                                             </td>
                                             <td width="20"></td>
