Update Ishita email signature

--- a/public/ishita.html
+++ b/public/ishita.html
@@ -1,4 +1,4 @@
-<table style="background-image: url(https://i.ibb.co/Jtfn2yP/enigma-signature.png);
+<table style="background-image: url('./signature20/bg-ele.png');
      background-repeat: no-repeat;
       background-size: contain;
        background-color: #fff;" cellpadding="0" cellspacing="0" height="250" width="650">
@@ -134,7 +134,7 @@
                         <tr>
                             <td width="25"></td>
                             <td width="90">
-                                <img alt="Logo" width="90" src="./signature20//enigma-logo.png">
+                                <img alt="Logo" width="90" src="./signature20/enigma-logo.png">
                             </td>
                             <td width="40">
 
