--- a/public/ishita.html
+++ b/public/ishita.html
@@ -37,7 +37,7 @@
                                             <td height="30" width="300">
                                                 <p
                                                     style="line-height: 25px; font-weight: 600; margin: 0px; letter-spacing: 1px; font-family: sans-serif; font-size: 12px; color: rgb(8, 39, 63);">
-                                                    ISHITA SHARMA</p>
+                                                    ISHITA SARKAR</p>
                                             </td>
                                             <td height="30" width="50">
                                                 <span
