--- a/public/ishita.html
+++ b/public/ishita.html
@@ -1,7 +1,7 @@
 <table style="background-image: url('./signature20/bg-ele.png');
      background-repeat: no-repeat;
       background-size: contain;
-       background-color: #fff !important; color: #000 !important;" cellpadding="0" cellspacing="0" height="250" width="650">
+       background-color: #fff;" cellpadding="0" cellspacing="0" height="250" width="650">
     <tbody>
         <tr>
             <td width="20" height="200"></td>
