--- a/public/email-signatures/bhaskar.html
+++ b/public/email-signatures/bhaskar.html
@@ -277,7 +277,7 @@
                             text-decoration: none !important;
                             cursor: pointer !important;
                           "
-                          href="https://www.facebook.com/"
+                          href="https://www.facebook.com/in.enigmadigital"
                           target="_blank"
                         >
                           <img
@@ -298,7 +298,7 @@
                             text-decoration: none !important;
                             cursor: pointer !important;
                           "
-                          href="https://www.linkedin.com/"
+                          href="https://in.linkedin.com/company/enigma-digital-product-design-ui-ux-neuromarketing"
                           target="_blank"
                         >
                           <img
@@ -315,13 +315,13 @@
                       </td>
                       <td width="30" height="50" align="center">
                         <a
-                          style="
-                            text-decoration: none !important;
-                            cursor: pointer !important;
-                          "
-                          href="https://twitter.com/"
-                          target="_blank"
-                        >
+                        style="
+                        text-decoration: none !important;
+                        cursor: pointer !important;
+                      "
+                      href="https://x.com/_EnigmaDigital"
+                      target="_blank"
+                    >
                           <img
                             style="
                               width: 20px;
@@ -340,7 +340,7 @@
                             text-decoration: none !important;
                             cursor: pointer !important;
                           "
-                          href="patronum.com"
+                          href="https://www.instagram.com/enigmadigital/"
                           target="_blank"
                         >
                           <img
@@ -349,8 +349,8 @@
                               padding: 10px 3px;
                               vertical-align: middle;
                             "
-                            alt="Google Icon"
-                            src="https://drive.google.com/thumbnail?id=1vfaQgIttWefIDpUS7plWVllwD3x1tKy6"
+                            alt="Instagram Icon"
+                            src="/email-signatures/images/instagram.png"
                             width="20"
                           />
                         </a>
