--- a/public/email-signatures/justin.html
+++ b/public/email-signatures/justin.html
@@ -1,6 +1,6 @@
 <table
   style="
-    background-image: url(https://drive.google.com/thumbnail?id=1JmtbjNZgj1_MLxgK3rpTl5jhW--oAW6q&sz=w650-h250);
+    background-image: url(/email-signatures/images/background.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-color: #fff;
@@ -17,7 +17,7 @@
         <img
           width="120"
           alt="Profile"
-          src="https://drive.google.com/thumbnail?id=12Gp1WgM7T-SIJGfHB3dT_QMNcrCax9in&sz=w120"
+          src="/email-signatures/images/justin-james.png"
         />
       </td>
       <td height="200" width="30">
@@ -62,7 +62,7 @@
                             color: rgb(8, 39, 63);
                           "
                         >
-                          BHASKAR VARSHNEY
+                          JUSTIN JAMES
                         </p>
                       </td>
                       <td height="30" width="50">
@@ -93,7 +93,7 @@
                     color: rgb(8, 39, 63);
                   "
                 >
-                  Founder & Chief Marketect
+                  Growth & Marketing
                 </p>
               </td>
             </tr>
@@ -122,7 +122,7 @@
                 <img
                   style="width: 20px; vertical-align: middle"
                   alt="Contact"
-                  src="https://drive.google.com/thumbnail?id=12aTlGkNyguWuTDXwNSUlMXwl-WNNeCve&sz=w20"
+                  src="/email-signatures/images/contact.png"
                   width="20"
                 />
               </td>
@@ -147,9 +147,9 @@
                     cursor: pointer !important;
                     color: rgb(8, 39, 63);
                   "
-                  href="tel:+918745044555"
+                  href="tel:+919971015570"
                   target="_blank"
-                  >+918745044555
+                  >+919971015570
                 </a>
               </td>
               <td></td>
@@ -160,7 +160,7 @@
                 <img
                   style="width: 20px; vertical-align: middle"
                   alt="Web"
-                  src="https://drive.google.com/thumbnail?id=1wG_3mnYwZNaosSbC_GPBKOAAlK8t_iSJ&sz=w20"
+                  src="/email-signatures/images/web.png"
                   width="20"
                 />
               </td>
@@ -201,7 +201,7 @@
                 <img
                   style="width: 20px; vertical-align: middle"
                   alt="Location"
-                  src="https://drive.google.com/thumbnail?id=1LIb9RgTbqJYXWL8xzELvhCP8_L1IDzbC&sz=w20"
+                  src="/email-signatures/images/location.png"
                   width="20"
                 />
               </td>
@@ -260,7 +260,7 @@
                 <img
                   alt="Logo"
                   width="90"
-                  src="https://drive.google.com/thumbnail?id=1f6p5MzXwc20iTlqUkRjXyIkFmE1eIy7Y"
+                  src="/email-signatures/images/logo.png"
                 />
               </td>
               <td width="40"></td>
@@ -277,7 +277,7 @@
                             text-decoration: none !important;
                             cursor: pointer !important;
                           "
-                          href="https://www.facebook.com/"
+                          href="https://www.facebook.com/in.enigmadigital"
                           target="_blank"
                         >
                           <img
@@ -287,7 +287,7 @@
                               vertical-align: middle;
                             "
                             alt="Facebook Icon"
-                            src="https://drive.google.com/thumbnail?id=13RCQnRRWCuEEbhAVES5EFBqErinDBL2o"
+                            src="/email-signatures/images/fb.png"
                             width="20"
                           />
                         </a>
@@ -298,7 +298,7 @@
                             text-decoration: none !important;
                             cursor: pointer !important;
                           "
-                          href="https://www.linkedin.com/"
+                          href="https://www.linkedin.com/in/justin-james27/"
                           target="_blank"
                         >
                           <img
@@ -308,7 +308,7 @@
                               vertical-align: middle;
                             "
                             alt="LinkedIn Icon"
-                            src="https://drive.google.com/thumbnail?id=1lfsRXiBQz1JozoAGUQdciiWXtjbTD8DO"
+                            src="/email-signatures/images/linkedin.png"
                             width="20"
                           />
                         </a>
@@ -319,7 +319,7 @@
                             text-decoration: none !important;
                             cursor: pointer !important;
                           "
-                          href="https://twitter.com/"
+                          href="https://x.com/_EnigmaDigital"
                           target="_blank"
                         >
                           <img
@@ -329,7 +329,7 @@
                               vertical-align: middle;
                             "
                             alt="Twitter Icon"
-                            src="https://drive.google.com/thumbnail?id=1MgkwhBaae-sVqR7ZYbBa6Ohz6IJ4BdAE"
+                            src="/email-signatures/images/twitter.png"
                             width="20"
                           />
                         </a>
@@ -340,7 +340,7 @@
                             text-decoration: none !important;
                             cursor: pointer !important;
                           "
-                          href="patronum.com"
+                          href="https://www.instagram.com/enigmadigital/"
                           target="_blank"
                         >
                           <img
@@ -349,8 +349,8 @@
                               padding: 10px 3px;
                               vertical-align: middle;
                             "
-                            alt="Google Icon"
-                            src="https://drive.google.com/thumbnail?id=1vfaQgIttWefIDpUS7plWVllwD3x1tKy6"
+                            alt="Instagram Icon"
+                            src="/email-signatures/images/instagram.png"
                             width="20"
                           />
                         </a>
