Publish Email Signature

--- a/public/email-signatures/justin.html
+++ b/public/email-signatures/justin.html
@@ -1,6 +1,6 @@
 <table
   style="
-    background-image: url(/email-signatures/images/background.png);
+    background-image: url(https://drive.google.com/thumbnail?id=1JmtbjNZgj1_MLxgK3rpTl5jhW--oAW6q&sz=w650-h250);
     background-repeat: no-repeat;
     background-size: contain;
     background-color: #fff;
@@ -17,7 +17,7 @@
         <img
           width="120"
           alt="Profile"
-          src="/email-signatures/images/justin-james.png"
+          src="https://weareenigma.com/email-signatures/images/justin-james.png"
         />
       </td>
       <td height="200" width="30">
@@ -122,7 +122,7 @@
                 <img
                   style="width: 20px; vertical-align: middle"
                   alt="Contact"
-                  src="/email-signatures/images/contact.png"
+                  src="https://weareenigma.com/email-signatures/images/contact.png"
                   width="20"
                 />
               </td>
@@ -160,7 +160,7 @@
                 <img
                   style="width: 20px; vertical-align: middle"
                   alt="Web"
-                  src="/email-signatures/images/web.png"
+                  src="https://weareenigma.com/email-signatures/images/web.png"
                   width="20"
                 />
               </td>
@@ -201,7 +201,7 @@
                 <img
                   style="width: 20px; vertical-align: middle"
                   alt="Location"
-                  src="/email-signatures/images/location.png"
+                  src="https://weareenigma.com/email-signatures/images/location.png"
                   width="20"
                 />
               </td>
@@ -260,7 +260,7 @@
                 <img
                   alt="Logo"
                   width="90"
-                  src="/email-signatures/images/logo.png"
+                  src="https://weareenigma.com/email-signatures/images/logo.png"
                 />
               </td>
               <td width="40"></td>
@@ -287,7 +287,7 @@
                               vertical-align: middle;
                             "
                             alt="Facebook Icon"
-                            src="/email-signatures/images/fb.png"
+                            src="https://weareenigma.com/email-signatures/images/fb.png"
                             width="20"
                           />
                         </a>
@@ -308,7 +308,7 @@
                               vertical-align: middle;
                             "
                             alt="LinkedIn Icon"
-                            src="/email-signatures/images/linkedin.png"
+                            src="https://weareenigma.com/email-signatures/images/linkedin.png"
                             width="20"
                           />
                         </a>
@@ -329,7 +329,7 @@
                               vertical-align: middle;
                             "
                             alt="Twitter Icon"
-                            src="/email-signatures/images/twitter.png"
+                            src="https://weareenigma.com/email-signatures/images/twitter.png"
                             width="20"
                           />
                         </a>
@@ -350,7 +350,7 @@
                               vertical-align: middle;
                             "
                             alt="Instagram Icon"
-                            src="/email-signatures/images/instagram.png"
+                            src="https://weareenigma.com/email-signatures/images/instagram.png"
                             width="20"
                           />
                         </a>
